kubernetes/ControllerTratte.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controllertratta
spec:
  replicas: 1 #scegliamo numero di repliche
  selector:
    matchLabels:
      app: controllertratta
  template:
    metadata:
      labels:
        app: controllertratta
    spec:
      containers:
      - name: controllertratta-container
        image: samperi_volpe-controller_tratta #TO_DO nome immagine + versione
        imagePullPolicy: Never
        env: #TO_DO l'ho inserito per vedere se posso usare la variabile di ambiente nel service
        - name: MYSQL_ROOT_PASSWORD #TO_DO An environment variable named “MYSQL_ROOT_PASSWORD.”
          valueFrom:
            secretKeyRef:
              name: mysql-secret
              key: password #TO_DO dove salviamo la nostra password nel secret
        ports:
        - containerPort: 5002
        # Aggiungi le variabili d'ambiente se necessario
        volumeMounts:
          - name: controllertratta-data
            mountPath: /path/to/database/data #TO_DO percorso database

      volumes:
        - name: controllertratta-data
          persistentVolumeClaim:
            claimName: controllertratta-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: controllertratta-service
  labels: #non so se serve
    app: controller_tratta
spec:
  selector:
    app: controller_tratta
  ports:
    #- protocol: TCP
    - port: 5002
      targetPort: 5002
