kubernetes/Orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestratore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestratore
  template:
    metadata:
      labels:
        app: orchestratore
    spec:
      containers:
      - name: orchestrator-container
        image: samperi_volpe-orchestrator #TO_DO nome immagine + versione
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        # Aggiungi le variabili d'ambiente se necessario

---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
  labels: #non so se serve
    app: orchestrator
spec:
  selector:
    app: orchestrator
  ports:
    #- protocol: TCP
    - port: 5013
      targetPort: 5013
