kubernetes/Scraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: scraper-container
        image: samperi_volpe-scraper #TO_DO nome immagine + versione
        imagePullPolicy: Never
        env: #TO_DO l'ho inserito per vedere se posso usare la variabile di ambiente nel service
        - name: MYSQL_ROOT_PASSWORD #TO_DO An environment variable named “MYSQL_ROOT_PASSWORD.”
          valueFrom:
            secretKeyRef:
              name: mysql-secret
              key: password #TO_DO dove salviamo la nostra password nel secret
        ports:
        - containerPort: 5012
        # Aggiungi le variabili d'ambiente se necessario

---
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
  labels: #non so se serve
    app: scraper
spec:
  selector:
    app: scraper
  ports:
    #- protocol: TCP
    - port: 5012
      targetPort: 5012
