kubernetes/UserController.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-controller
  template:
    metadata:
      labels:
        app: user-controller
    spec:
      containers:
      - name: user-controller-container
        image: samperi_volpe-user_controller #TO_DO nome immagine + versione
        # image: kubernetes-user_controller
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        # Aggiungi le variabili d'ambiente se necessario

---
apiVersion: v1
kind: Service
metadata:
  name: user-controller-service
  labels: #non so se serve
    app: user-controller
spec:
  selector:
    app: user-controller
  ports:
    #- protocol: TCP
    - port: 5000
      targetPort: 5000
