kubernetes/UserInfo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users-container
        image: samperi_volpe-users #TO_DO nome immagine + versione
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
        # Aggiungi le variabili d'ambiente se necessario
        volumeMounts:
          - name: users-data
            mountPath: /path/to/database/data #TO_DO percorso database

      volumes:
        - name: users-data
          persistentVolumeClaim:
            claimName: users-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels: #non so se serve
    app: users
spec:
  selector:
    app: users
  ports:
    #- protocol: TCP
    - port: 5001
      targetPort: 5001
