kubernetes/nodeExporter.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: node-exporter-config
# data:
#   node-exporter.yml: |-
#     listen_address: 0.0.0.0:9100

apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  name: node-exporter
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: node-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: exporter
        app.kubernetes.io/name: node-exporter
    spec:
      containers:
      - args:
        - --path.sysfs=/host/sys
        - --path.rootfs=/host/root
        - --no-collector.wifi
        - --no-collector.hwmon
        - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
        - --collector.netclass.ignored-devices=^(veth.*)$
        name: node-exporter
        image: prom/node-exporter
        ports:
          - containerPort: 9100
            protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 180Mi
          requests:
            cpu: 102m
            memory: 180Mi
        volumeMounts:
        - mountPath: /host/sys
          name: sys
          readOnly: true
        - mountPath: /host/root
          name: root
          readOnly: true
      volumes:
      - hostPath:
          path: /sys
        name: sys
      - hostPath:
          path: /
        name: root

---
kind: Service
apiVersion: v1
metadata:
  name: node-exporter
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9100'
spec:
  selector:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: node-exporter
  ports:
  - name: node-exporter
    protocol: TCP
    port: 9100
    targetPort: 9100

# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: node-exporter
# spec:
#   replicas: 0
#   selector:
#     matchLabels:
#       app: node-exporter
#   template:
#     metadata:
#       labels:
#         app: node-exporter
#     spec:
#       containers:
#       - name: node-exporter
#         image: prom/node-exporter:latest
#         ports:
#         - containerPort: 9100
#         volumeMounts:
#         - name: config-volume
#           mountPath: /etc/node-exporter/
#       volumes:
#       - name: config-volume
#         configMap:
#           name: node-exporter-config
