kubernetes/ingress.yaml
# apiVersion: networking.k8s.io/v1
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ingress
  #namespace: your-namespace
spec:
  rules:
  - host: localhost #TO_DO vedi
    http:
      paths:
      - path: /user/* #TO_DO vedi
        pathType: Prefix
        backend:
          service:
            name: user-controller-service
            port:
              number: 5000  
      - path: /slamanager/* #TO_DO vedi
        pathType: Prefix
        backend:
          service:
            name: slamanager-service
            port:
              number: 5014
